neural_coder_workspace/bench1661510569390029/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 405
    if not False: # [coder-enabled]
    ^
SyntaxError: invalid syntax
